@@ -58,22 +58,12 @@ namespace CLHEP {
 // On some compilers the static instance of the HepRandom generator
 // needs to be created explicitly in the client code (i.e. here).
 
-#if __GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ > 6)
-  #pragma GCC diagnostic push
-  #pragma GCC diagnostic ignored "-Wunused-variable"
-#elif __clang__
-  #pragma clang diagnostic push
-  #pragma clang diagnostic ignored "-Wunused-variable"
-#endif
-
+#if __GNUC__
+static const int HepRandomGenActive __attribute__((unused)) = HepRandom::createInstance();
+#else
 static const int HepRandomGenActive = HepRandom::createInstance();
+#endif
 
 }  // namespace CLHEP
-
-#if __GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ > 6)
-  #pragma GCC diagnostic pop
-#elif __clang__
-  #pragma clang diagnostic pop
-#endif
 
 #endif
