@@ -19,11 +19,12 @@ committal in the CVS repository !
 
 15 June 2015 - G.Cosmo
 - Updated to CLHEP-2.2.0.8. 
+- Switch off gcc-5 warning for unused variable in Randomize.h header.
 
 11 June 2015 - G.Cosmo
 - Moved static methods handling static data in G4RandGauss from inline
   to source. Addressing problem report #1754.
-- Switch off warnings for deprecated calls to auto_ptr in Utility headers.
+- Switch off gcc-5 warnings for deprecated calls to auto_ptr in Utility headers.
 
 9 April 2015 - G.Cosmo
 - Fixed usage of std::abs() in RandGaussZiggurat source...
